5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1644_2446.log
== TEST (2019-04-14 11:54:01) 
-- CODE:
s = int(input("digite a senha: "))

a = (s/1000)%10

print(a)


-- OUTPUT:
7.611999999999995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:54:49) 
-- CODE:
s = int(input("digite a senha: "))

a = (s%10)

print(a)


-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:55:12) 
-- CODE:
s = int(input("digite a senha: "))

a = (s%10)
b = (s%100)//10
print(a)


-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:55:18) 
-- CODE:
s = int(input("digite a senha: "))

a = (s%10)
b = (s%100)//10
print(b)


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:55:22) 
-- CODE:
s = int(input("digite a senha: "))

a = (s%10)
b = (s%100)//10
print(a,b)


-- OUTPUT:
2 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:56:01) 
-- CODE:
s = int(input("digite a senha: "))

a = (s%10)
b = (s%100)//10
c = (s%1000)//100





print(a," ",b," ",c)


-- OUTPUT:
2   1   6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:56:05) 
-- CODE:
s = int(input("digite a senha: "))

a = (s%10)
b = (s%100)//10
c = (s%1000)//100





print(a," ",b," ",c)


-- OUTPUT:
2   1   6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:56:28) 
-- CODE:
s = int(input("digite a senha: "))

a = (s%10)
b = (s%100)//10
c = (s%1000)//100
c = (s%10000)//1000





print(a," ",b," ",c)


-- OUTPUT:
2   1   7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:56:40) 
-- CODE:
s = int(input("digite a senha: "))

a = (s%10)
b = (s%100)//10
c = (s%1000)//100
d = (s%10000)//1000





print(a," ",b," ",c," ",d)


-- OUTPUT:
2   1   6   7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:57:09) 
-- CODE:
s = int(input("digite a senha: "))

a = (s%10)
b = (s%100)//10
c = (s%1000)//100
d = (s%10000)//1000
e = (s%100000)//10000





print(a," ",b," ",c," ",d," ",e)


-- OUTPUT:
2   1   6   7   8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:57:35) 
-- CODE:
s = int(input("digite a senha: "))

a = (s%10)
b = (s%100)//10
c = (s%1000)//100
d = (s%10000)//1000
e = (s%100000)//10000
f = int(s/10)





print(a," ",b," ",c," ",d," ",e," ",f)


-- OUTPUT:
2   1   6   7   8   8761
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:57:51) 
-- CODE:
s = int(input("digite a senha: "))

a = (s%10)
b = (s%100)//10
c = (s%1000)//100
d = (s%10000)//1000
e = (s%100000)//10000
f = int(s/1000)





print(a," ",b," ",c," ",d," ",e," ",f)


-- OUTPUT:
2   1   6   7   8   87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:57:55) 
-- CODE:
s = int(input("digite a senha: "))

a = (s%10)
b = (s%100)//10
c = (s%1000)//100
d = (s%10000)//1000
e = (s%100000)//10000
f = int(s/1000)





print(a," ",b," ",c," ",d," ",e," ",f)


-- OUTPUT:
2   1   6   7   8   87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:57:58) 
-- CODE:
s = int(input("digite a senha: "))

a = (s%10)
b = (s%100)//10
c = (s%1000)//100
d = (s%10000)//1000
e = (s%100000)//10000
f = int(s/10000)





print(a," ",b," ",c," ",d," ",e," ",f)


-- OUTPUT:
2   1   6   7   8   8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:58:05) 
-- CODE:
s = int(input("digite a senha: "))

a = (s%10)
b = (s%100)//10
c = (s%1000)//100
d = (s%10000)//1000
e = (s%100000)//10000
f = int(s/100000)





print(a," ",b," ",c," ",d," ",e," ",f)


-- OUTPUT:
2   1   6   7   8   0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:59:21) 
-- CODE:
s = int(input("digite a senha: "))

a = int(s%10)
b = int((s%100)//10)
c = int((s%1000)//100)
d = int((s%10000)//1000)
e = int((s%100000)//1000)0
f = int(s/100000)





print(a," ",b," ",c," ",d," ",e," ",f)


-- ERROR:
File "XXXX", line 7
    e = int((s%100000)//1000)0
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:59:33) 
-- CODE:
s = int(input("digite a senha: "))

a = int(s%10)
b = int((s%100)//10)
c = int((s%1000)//100)
d = int((s%10000)//1000)
e = int((s%100000)//10000
f = int(s/100000)





print(a," ",b," ",c," ",d," ",e," ",f)


-- ERROR:
File "XXXX", line 8
    f = int(s/100000)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:59:35) 
-- CODE:
s = int(input("digite a senha: "))

a = int(s%10)
b = int((s%100)//10)
c = int((s%1000)//100)
d = int((s%10000)//1000)
e = int((s%100000)//10000)
f = int(s/100000)





print(a," ",b," ",c," ",d," ",e," ",f)


-- OUTPUT:
2   1   6   7   8   0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:03:12) 
-- CODE:
s = int(input("digite a senha: "))

f = int(s%10)							#6º
e = int((s%100)//10)					#5º
d = int((s%1000)//100)				#4º
c = int((s%10000)//1000)			#3º
b = int((s%100000)//10000)			#2º
a = int(s/100000)						#1º

x = (a+c+f)
y = (b+d+e)
w = x/y

if w ==0:
	print("acesso liberado")

else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:03:16) 
-- CODE:
s = int(input("digite a senha: "))

f = int(s%10)							#6º
e = int((s%100)//10)					#5º
d = int((s%1000)//100)				#4º
c = int((s%10000)//1000)			#3º
b = int((s%100000)//10000)			#2º
a = int(s/100000)						#1º

x = (a+c+f)
y = (b+d+e)
w = x/y

if w ==0:
	print("acesso liberado")

else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:03:41) 
-- CODE:
s = int(input("digite a senha: "))

f = int(s%10)							#6º
e = int((s%100)//10)					#5º
d = int((s%1000)//100)				#4º
c = int((s%10000)//1000)			#3º
b = int((s%100000)//10000)			#2º
a = int(s/100000)						#1º

x = (a+c+f)
y = (b+d+e)
w = x/y

if w ==0:
	print("acesso liberado")

else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:04:00) 
-- CODE:
s = int(input("digite a senha: "))

f = int(s%10)							#6º
e = int((s%100)//10)					#5º
d = int((s%1000)//100)				#4º
c = int((s%10000)//1000)			#3º
b = int((s%100000)//10000)			#2º
a = int(s/100000)						#1º

x = (a+c+f)
y = (b+d+e)
w = x/y
print(w)

if w == 0:
	print("acesso liberado")

else:
	print("senha invalida")
-- OUTPUT:
0.6
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:04:10) 
-- CODE:
s = int(input("digite a senha: "))

f = int(s%10)							#6º
e = int((s%100)//10)					#5º
d = int((s%1000)//100)				#4º
c = int((s%10000)//1000)			#3º
b = int((s%100000)//10000)			#2º
a = int(s/100000)						#1º

x = (a+c+f)
y = (b+d+e)
w = int(x/y)
print(w)

if w == 0:
	print("acesso liberado")

else:
	print("senha invalida")
-- OUTPUT:
0
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:04:15) 
-- CODE:
s = int(input("digite a senha: "))

f = int(s%10)							#6º
e = int((s%100)//10)					#5º
d = int((s%1000)//100)				#4º
c = int((s%10000)//1000)			#3º
b = int((s%100000)//10000)			#2º
a = int(s/100000)						#1º

x = (a+c+f)
y = (b+d+e)
w = int(x/y)

if w == 0:
	print("acesso liberado")

else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:04:22) 
-- CODE:
s = int(input("digite a senha: "))

f = int(s%10)							#6º
e = int((s%100)//10)					#5º
d = int((s%1000)//100)				#4º
c = int((s%10000)//1000)			#3º
b = int((s%100000)//10000)			#2º
a = int(s/100000)						#1º

x = (a+c+f)
y = (b+d+e)
w = int(x/y)

if w == 0:
	print("acesso liberado")

else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:04:23) 
-- CODE:
s = int(input("digite a senha: "))

f = int(s%10)							#6º
e = int((s%100)//10)					#5º
d = int((s%1000)//100)				#4º
c = int((s%10000)//1000)			#3º
b = int((s%100000)//10000)			#2º
a = int(s/100000)						#1º

x = (a+c+f)
y = (b+d+e)
w = int(x/y)

if w == 0:
	print("acesso liberado")

else:
	print("senha invalida")
-- EXECUTION TIME:
0.157108
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:04:25) 
-- CODE:
s = int(input("digite a senha: "))

f = int(s%10)							#6º
e = int((s%100)//10)					#5º
d = int((s%1000)//100)				#4º
c = int((s%10000)//1000)			#3º
b = int((s%100000)//10000)			#2º
a = int(s/100000)						#1º

x = (a+c+f)
y = (b+d+e)
w = int(x/y)

if w == 0:
	print("acesso liberado")

else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:05:54) 
-- CODE:
s = int(input("digite a senha: "))

a = int(s%10)							#6º
b = int((s%100)//10)					#5º
c = int((s%1000)//100)				#4º
d = int((s%10000)//1000)			#3º
e = int((s%100000)//10000)			#2º
f = int(s/100000)						#1º

x = (e + c + a)
y = (b + d + f)
w = x/y

print(w)
if w == 0:
	print("acesso liberado")

else:
	print("senha invalida")
-- OUTPUT:
2.0
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:06:09) 
-- CODE:
s = int(input("digite a senha: "))

a = int(s%10)							#6º
b = int((s%100)//10)					#5º
c = int((s%1000)//100)				#4º
d = int((s%10000)//1000)			#3º
e = int((s%100000)//10000)			#2º
f = int(s/100000)						#1º

x = (e + c + a)
y = (b + d + f)
w = x/y

print(w)
if w == 0:
	print("acesso liberado")

else:
	print("senha invalida")
-- OUTPUT:
2.0
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:06:13) 
-- CODE:
s = int(input("digite a senha: "))

a = int(s%10)							#6º
b = int((s%100)//10)					#5º
c = int((s%1000)//100)				#4º
d = int((s%10000)//1000)			#3º
e = int((s%100000)//10000)			#2º
f = int(s/100000)						#1º

x = (e + c + a)
y = (b + d + f)
w = x/y

print(w)
if w == 0:
	print("acesso liberado")

else:
	print("senha invalida")
-- OUTPUT:
2.0
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:06:21) 
-- CODE:
s = int(input("digite a senha: "))

a = int(s%10)							#6º
b = int((s%100)//10)					#5º
c = int((s%1000)//100)				#4º
d = int((s%10000)//1000)			#3º
e = int((s%100000)//10000)			#2º
f = int(s/100000)						#1º

x = (e + c + a)
y = (b + d + f)
w = x//y

print(w)
if w == 0:
	print("acesso liberado")

else:
	print("senha invalida")
-- OUTPUT:
2
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:06:29) 
-- CODE:
s = int(input("digite a senha: "))

a = int(s%10)							#6º
b = int((s%100)//10)					#5º
c = int((s%1000)//100)				#4º
d = int((s%10000)//1000)			#3º
e = int((s%100000)//10000)			#2º
f = int(s/100000)						#1º

x = (e + c + a)
y = (b + d + f)
w = x//y

print(w)
if w == 0:
	print("acesso liberado")

else:
	print("senha invalida")
-- OUTPUT:
2
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:07:45) 
-- CODE:
s = int(input("digite a senha: "))

a = int(s%10)							#6º
b = int((s%100)//10)					#5º
c = int((s%1000)//100)				#4º
d = int((s%10000)//1000)			#3º
e = int((s%100000)//10000)			#2º
f = int(s/100000)						#1º

print(e,c,a)
print(b,d,f)


x = (e + c + a)
y = (b + d + f)
w = x//y

print(w)
if w == 0:
	print("acesso liberado")

else:
	print("senha invalida")
-- OUTPUT:
8 6 2
1 7 0
2
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:08:38) 
-- CODE:
s = int(input("digite a senha: "))

a = int(s%10)							#6º
b = int((s%100)//10)					#5º
c = int((s%1000)//100)				#4º
d = int((s%10000)//1000)			#3º
e = int((s%100000)//10000)			#2º
f = int(s/100000)						#1º

print(e,c,a)
print(b,d,f)


x = (e + c + a)
y = (b + d + f)
w = x%y

print(w)
if w == 0:
	print("acesso liberado")

else:
	print("senha invalida")
-- OUTPUT:
8 6 2
1 7 0
0
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:08:57) 
-- CODE:
s = int(input("digite a senha: "))

a = int(s%10)							#6º
b = int((s%100)//10)					#5º
c = int((s%1000)//100)				#4º
d = int((s%10000)//1000)			#3º
e = int((s%100000)//10000)			#2º
f = int(s/100000)						#1º

x = (e + c + a)
y = (b + d + f)
w = x%y

if w == 0:
	print("acesso liberado")

else:
	print("senha invalida")
-- EXECUTION TIME:
0.203993
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
